<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:columnCount="3"
    android:rowCount="3"
    android:layout_height="match_parent">
    <Button
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:padding="20dp"
        android:text="@string/xuancai"
        />

    <Button
        android:layout_width="130dp"
        android:padding="20dp"
        android:layout_height="65dp"
        android:text="@string/anzhuang"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/chaigai"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/shuidian"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/fangshui"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/niwa"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/mugong"
        android:textSize="20sp" />
    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/youqi"
        android:textSize="20sp" />
</GridLayout>