<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:columnCount="3"
    android:rowCount="2"
    android:layout_height="match_parent">
    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/wuran"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/yanshou"
        android:textSize="20sp" />

    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/huli"
        android:textSize="20sp" />
    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/peishi"
        android:textSize="20sp" />
    <Button
        android:padding="20dp"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:text="@string/jiasi"
        android:textSize="20sp" />
</GridLayout>