<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/strategy"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_container_id">
        <TextView
            android:id="@+id/tv_qian_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qian"

            android:paddingLeft="40dp"
            />
        <ImageView
            android:id="@+id/iv_qian_id"
           android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="strategy_popupMenu"
           android:background="@drawable/strategy_img_selector"
            android:paddingLeft="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhong"

            android:paddingLeft="40dp"/>
        <ImageView
            android:id="@+id/iv_zhong_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="strategy_popupMenu"
            android:background="@drawable/strategy_img_selector"
            android:paddingLeft="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/hou"

            android:paddingLeft="40dp"/>
        <ImageView
            android:id="@+id/iv_hou_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="strategy_popupMenu"
            android:background="@drawable/strategy_img_selector"
            android:paddingLeft="25dp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/zhuangxiu_rv_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>